# bwsandbox

./: Cargo.toml  PKGBUILD  README.md
.github/workflows/: rust-pr.yml  rust-release.yml  rust-tests.yml
bwsandbox/: Cargo.toml
bwsandbox-netns/: Cargo.toml
bwsandbox-netns/src/: capabilities.rs  config.rs  error.rs  main.rs  netns.rs  trace.rs
bwsandbox/src/: error.rs  main.rs  print_command.rs  temp_dir.rs  utils.rs
bwsandbox/src/app/: args.rs  config.rs  current_dir.rs  mod.rs
bwsandbox/src/bwrap/: builder.rs  ctl.rs  events.rs  mod.rs  proc.rs  sigterm.rs
bwsandbox/src/config/: cmd.rs  entry.rs  mod.rs  template.rs
bwsandbox/src/config/values/: arg.rs  env.rs  tempfile.rs
bwsandbox/src/services/: appimage.rs  dbus.rs  env_mapper.rs  mod.rs  nix.rs
bwsandbox/src/services/net/: nsfix.rs  resolv_conf.rs
bwsandbox/src/services/net/pasta/: mod.rs
bwsandbox/src/services/net/slirp4netns/: service.rs
bwsandbox/src/services/nix/: bin.rs  cmd.rs  mod.rs
bwsandbox/src/services/seccomp/: config.rs  mod.rs
bwsandbox/src/services/seccomp/ffi/: arch.rs  filter_attr.rs  filter_ctx.rs  mod.rs  syscall.rs
bwsandbox/src/services/types/: handle.rs  mod.rs  scope.rs  service.rs
bwsandbox/src/services/wl/: mod.rs
bwsandbox/src/services/wl/security_context_v1/: app_id.rs  config.rs  mod.rs
bwsandbox/src/system/: fd.rs  file_poll.rs  mod.rs  pidfd.rs  poll.rs  poll_file.rs  shared_pipe.rs
bwsandbox/src/system/fd/: mod.rs  shared_pipe.rs
bwsandbox/src/system/namespaces/: ioctl.rs  mod.rs
bwsandbox/src/tests/: mod.rs  utils.rs
bwsandbox/src/tests/profiles/: bwrap-home.toml  with-appimage.toml  with-env.toml  with-pasta.toml  with-seccomp.toml  with-slirp4netns.toml
bwsandbox/src/tests/profiles/test-relative/: profile.toml
bwsandbox/src/utils/: mod.rs  path_bin.rs  rand.rs
config/: dbus-generic.toml  profile-games-rt.toml  seccomp-generic.toml
config/templates/: bw-base-user.hbs  bw-base.hbs  bw-games-rt.hbs
example/: simple-seccomp.toml  simple.j2  simple.toml
profiles/: generic-dbus.toml  generic-env.toml  generic-seccomp.toml  generic.toml  simple-seccomp.toml  simple.toml
profiles/templates/: base.j2  generic.j2  user.j2  xwayland.j2
src/: app.rs  args.rs  config.rs  dbus.rs  env_mapper.rs  error.rs  fd.rs  main.rs  paths.rs  run_scope.rs  service.rs  temp_dir.rs  utils.rs
src/app/: args.rs  config.rs  dbus.rs  internal.rs  manager.rs  mod.rs  sandbox.rs  scope_destroyer.rs  seccomp.rs
src/bwrap/: args.rs  events.rs  mod.rs  proc.rs  runner.rs
src/config/: cmd.rs  entry.rs  template.rs
src/config/values/: env.rs  mod.rs
src/models/: dbus.rs  env_value.rs  mod.rs  profile.rs  seccomp.rs  template.rs
src/seccomp/: mod.rs
src/seccomp/ffi/: filter_ctx.rs  syscall.rs
src/seccomp_ffi/: action.rs  arch.rs  filter_ctx.rs  mod.rs  syscall.rs
src/services/: appimage.rs  dbus.rs  env_mapper.rs  mod.rs  slirp4netns.rs
src/services/net/: mod.rs  nsfix.rs  resolv_conf.rs
src/services/net/pasta/: mod.rs
src/services/net/slirp4netns/: config.rs  mod.rs  service.rs
src/services/seccomp/: mod.rs
src/services/seccomp/ffi/: action.rs  arch.rs  filter_ctx.rs
src/services/slirp4netns/: config.rs  ioctl.rs  mod.rs  namespace.rs  service.rs
src/services/types/: mod.rs  scope.rs  service.rs
src/system/: mod.rs
src/system/fd/: mod.rs  shared_pipe.rs
src/system/namespaces/: mod.rs
src/tests/: mod.rs  utils.rs
src/tests/profiles/: bwrap-home.toml  bwrap-no-home.toml  with-appimage.toml  with-dbus.toml  with-env.toml  with-pasta.toml  with-seccomp.toml  with-slirp4netns.toml
src/tests/profiles/templates/: base.j2
