[package]
name = "bwsandbox"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
unreadable_literal = "allow"
missing_errors_doc = "allow"

[dependencies]
anyhow = { version = "1.0", default-features = false, features = ["std"] }
minijinja = { version = "2.12", default-features = false, features = ["multi_template", "serde", "loader"] }
nanoid = { version = "0.4", default-features = false }
rustix = { version = "1.1", features = ["thread"], default-features = false }
serde = { version = "1.0", default-features = false, features = ["std", "derive"] }
shellexpand = { version = "3.1", default-features = false, features = ["base-0"] }
shlex = { version = "1.3", default-features = false, features = ["std"] }
tempfile = { version = "3.23", default-features = false }
thiserror = { version = "2.0", default-features = false, features = ["std"] }
toml = { version = "0.9", default-features = false, features = ["std", "serde", "parse"] }
tracing = { version = "0.1", default-features = false, features = ["std", "attributes"] }
lexopt = { version = "0.3", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["ansi", "env-filter", "fmt", "registry"] }
ctrlc = { version = "3.5", default-features = false, features = ["termination"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
linux-raw-sys = { version = "0.12", default-features = false, features = ["ioctl"] }

[dev-dependencies]
toml = { version = "*", default-features = false, features = ["std", "serde", "parse", "display"] }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
