[workspace]
resolver = "3"
members = ["bwsandbox", "bwsandbox-netns"]

[workspace.dependencies]
rustix = { version = "1.1", default-features = false }
serde = { version = "1.0", default-features = false }
thiserror = { version = "2.0", default-features = false }
toml = { version = "1.1", default-features = false }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
