[workspace]
resolver = "3"
members = ["bwsandbox", "bwsandbox-netns"]

[workspace.package]
version = "0.5.3"
edition = "2024"
license = "GPL-3.0-or-later"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
unreadable_literal = "allow"
missing_errors_doc = "allow"

[workspace.dependencies]
rustix = { version = "1.1", default-features = false }
serde = { version = "1.0", default-features = false }
thiserror = { version = "2.0", default-features = false }
toml = { version = "1.1", default-features = false }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"
