[package]
name = "bwsandbox-netns"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
rustix = { workspace = true, features = ["process", "thread", "mount", "std"], default-features = false }
serde = { workspace = true, default-features = false, features = ["std", "derive"] }
thiserror = { workspace = true, default-features = false, features = ["std"] }
toml = { workspace = true, default-features = false, features = ["std", "serde", "parse"] }
