[package]
name = "bwsandbox"
version = "0.5.1"
edition = "2024"
license = "GPL-3.0-or-later"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
unreadable_literal = "allow"
missing_errors_doc = "allow"

[dependencies]
rustix = { workspace = true, features = ["thread", "event"], default-features = false }
serde = { workspace = true, default-features = false, features = ["std", "derive"] }
thiserror = { workspace = true, default-features = false, features = ["std"] }
toml = { workspace = true, default-features = false, features = ["std", "serde", "parse"] }

anyhow = { version = "1.0", default-features = false, features = ["std"] }
minijinja = { version = "2.19", default-features = false, features = ["multi_template", "serde", "loader"] }
nanoid = { version = "0.5", default-features = false }
shellexpand = { version = "3.1", default-features = false, features = ["base-0"] }
shlex = { version = "1.3", default-features = false, features = ["std"] }
tempfile = { version = "3.27", default-features = false }
tracing = { version = "0.1", default-features = false, features = ["std", "attributes"] }
lexopt = { version = "0.3", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["ansi", "env-filter", "fmt", "registry"] }
ctrlc = { version = "3.5", default-features = false, features = ["termination"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
linux-raw-sys = { version = "0.12", default-features = false, features = ["ioctl"] }

[dev-dependencies]
toml = { workspace = true, default-features = false, features = ["std", "serde", "parse", "display"] }
