[package]
name = "bwsandbox"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
rustix = { workspace = true, features = ["thread", "event"], default-features = false }
serde = { workspace = true, default-features = false, features = ["std", "derive"] }
thiserror = { workspace = true, default-features = false, features = ["std"] }
toml = { workspace = true, default-features = false, features = ["std", "serde", "parse"] }

anyhow = { version = "1.0", default-features = false, features = ["std"] }
minijinja = { version = "2.19", default-features = false, features = ["multi_template", "serde", "loader"] }
shellexpand = { version = "3.1", default-features = false, features = ["base-0"] }
shlex = { version = "1.3", default-features = false, features = ["std"] }
tempfile = { version = "3.27", default-features = false }
tracing = { version = "0.1", default-features = false, features = ["std", "attributes"] }
lexopt = { version = "0.3", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["ansi", "env-filter", "fmt", "registry"] }
ctrlc = { version = "3.5", default-features = false, features = ["termination"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
linux-raw-sys = { version = "0.12", default-features = false, features = ["ioctl"] }
getrandom = { version = "0.4", default-features = false }

[dev-dependencies]
toml = { workspace = true, default-features = false, features = ["std", "serde", "parse", "display"] }
