[package]
name = "bwsandbox"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
rustix = { workspace = true, features = ["thread", "event", "fs", "process", "rand"], default-features = false }
serde = { workspace = true, default-features = false, features = ["std", "derive"] }
thiserror = { workspace = true, default-features = false, features = ["std"] }
toml = { workspace = true, default-features = false, features = ["std", "serde", "parse"] }

anyhow = { version = "1.0", default-features = false, features = ["std"] }
minijinja = { version = "2.19", default-features = false, features = ["multi_template", "serde", "loader"] }
shellexpand = { version = "3.1", default-features = false, features = ["base-0"] }
shlex = { version = "1.3", default-features = false, features = ["std"] }
tempfile = { version = "3.27", default-features = false }
lexopt = { version = "0.3", default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
linux-raw-sys = { version = "0.12", default-features = false, features = ["ioctl"] }
log = { version = "0.4", default-features = false, features = ["std"] }
env_logger = { version = "0.11", default-features = false, features = ["color"] }
signal-hook = { version = "0.4", default-features = false }

[dev-dependencies]
toml = { workspace = true, default-features = false, features = ["std", "serde", "parse", "display"] }
